--- a/Web_Lesson2/index.html
+++ b/Web_Lesson2/index.html
@@ -31,7 +31,7 @@
 <div><button type="submit">button</button></div>
 <br>
 <br>
-<img src="Pictures/1200px-HTML5_logo_and_wordmark.svg.png" alt="Girl in a jacket" width="500" height="600">
+<img src="../Pictures/download.png" alt="html Image" width="500" height="600">
 <ol>
     <li>Block elements used</li>
     <ul>
